# INFT2503-EXAMPREP

./: CMakeLists.txt
2021H/: Task1-2021H.cpp  Task2-2021H.cpp  Task3-2021H.cpp  Task4-2021H.cpp  Task5-2021H.cpp
2021V/: Task1-2021V.cpp  Task1.cpp  Task2-2021V.cpp  Task2.cpp  Task3-2021V.cpp  Task3.cpp  Task4-2021V.cpp  Task4.cpp  Task5-2021V.cpp  Task5.cpp
2022V/: Task1-2022V.cpp  Task2-2022V.cpp  Task3-2022V.cpp  Task4-2022V.cpp  Task5-2022V.cpp
