cmake_minimum_required(VERSION 3.23)
project(INFT2503PreviousEXAMS)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1 "2021V/Task1.cpp")
add_executable(Task2 "2021V/Task2.cpp")
add_executable(Task3 "2021V/Task3.cpp")
add_executable(Task4 "2021V/Task4.cpp")
add_executable(Task5 "2021V/Task5.cpp")
add_executable(Task1-2021H "2021H/Task1-2021H.cpp")
add_executable(Task2-2021H "2021H/Task2-2021H.cpp")
add_executable(Task3-2021H "2021H/Task3-2021H.cpp")
add_executable(Task4-2021H "2021H/Task4-2021H.cpp")
add_executable(Task5-2021H "2021H/Task5-2021H.cpp")